@@ -15,7 +15,7 @@
  *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA.
  *
  * Authors: Ross Burton <ross@burtonini.com>
  */
@@ -26,7 +26,7 @@
 #include <libedataserver/e-source-group.h>
 #include <libedataserver/e-source-list.h>
 #include <libebook/e-contact.h>
-#include <gtk/gtkentry.h>
+#include <gtk/gtk.h>
 
 G_BEGIN_DECLS
 
